Implemented test for getting all, getting one, adding, updating. Update has bug in response.